--- a/ansible/data-sandpit/docker.yml
+++ b/ansible/data-sandpit/docker.yml
@@ -5,6 +5,15 @@
   become_method: sudo
 
   tasks:
+  - name: ensure HDP2.5 image is present
+    copy: src=$HOME/HDP_2.5_docker.tar.gz dest=/home/k5user/HDP_2.5_docker.tar.gz force=no
+  - name: Register tarball name for HDP2.5
+    stat:
+      path: /home/k5user/HDP_2.5_docker.tar
+    register: docker_tar
+  - name: gunzip the HDP2.5 tarball (if non extant)
+    command: gunzip /home/k5user/HDP_2.5_docker.tar.gz
+    when: docker_tar.stat.exists == False
   - name: ensure docker repo is present
     template: src=/home/k5user/data-sandpit/configs/docker-repo.j2 dest=/etc/yum.repos.d/docker.repo
   - name: ensure docker-engine is installed
@@ -23,6 +32,8 @@
     command: /usr/bin/systemctl daemon-reload
   - name: restart docker
     command: /usr/bin/systemctl restart docker
+  - name: load docker HDP2.5 image into Docker
+    command: docker load < /home/k5user/HDP_2.5_docker.tar
   - name: check bash script exists for startup
     template: src=/home/k5user/data-sandpit/configs/hdp-docker-startup.sh.j2 dest=/home/k5user/hdp-docker-startup.sh
   - name: make the script executable
