--- a/ansible/data-sandpit/docker.yml
+++ b/ansible/data-sandpit/docker.yml
@@ -6,7 +6,7 @@
 
   tasks:
   - name: ensure HDP2.5 image is present
-    copy: src=$HOME/HDP_2.5_docker.tar.gz dest=/home/k5user/HDP_2.5_docker.tar.gz force=no
+    copy: src=/home/k5user/HDP_2.5_docker.tar.gz dest=/home/k5user/HDP_2.5_docker.tar.gz force=no
   - name: Register tarball name for HDP2.5
     stat:
       path: /home/k5user/HDP_2.5_docker.tar
