--- a/ansible/data-sandpit/docker.yml
+++ b/ansible/data-sandpit/docker.yml
@@ -43,7 +43,7 @@
   - name: restart docker
     command: /usr/bin/systemctl restart docker
   - name: load docker HDP2.5 image into Docker
-    command: docker load < /home/k5user/HDP_2.5_docker.tar
+    shell: docker load < /home/k5user/HDP_2.5_docker.tar
   - name: check bash script exists for startup
     template: src=/home/k5user/git/data-analytics/ansible/data-sandpit/configs/hdp-docker-startup.sh.j2 dest=/home/k5user/hdp-docker-startup.sh
   - name: make the script executable
